# aoc2022-rust

./: Cargo.toml  LICENSE  README.md  kek
src/: lib.rs  main.rs
src/days/: eight.rs  eleven.rs  fifteen.rs  five.rs  four.rs  fourteen.rs  mod.rs  nine.rs  one.rs  seven.rs  six.rs  ten.rs  thirteen.rs  three.rs  twelve.rs  two.rs
