[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[lib]
name = "aoc"
path = "src/lib.rs"

[[bin]]
name = "one"
path = "src/days/one.rs"
[[bin]]
name = "two"
path = "src/days/two.rs"
